log

Sat 12 Aug 2023 08:40:17 PM UTC: 
 exercises.c | 104 +++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 96 insertions(+), 8 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   33 |     int aux = arr[left];
      |         ^~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:8: error: ‘newSize’ redeclared as different kind of symbol
   55 |   int *newSize = 0;
      |        ^~~~~~~
exercises.c:53:50: note: previous definition of ‘newSize’ with type ‘int *’
   53 | int *filterEvenNumbers(int arr[], int size, int *newSize){
      |                                             ~~~~~^~~~~~~
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’ [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e67cebf
Sat 12 Aug 2023 08:41:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   33 |     int aux = arr[left];
      |         ^~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:8: error: ‘newSize’ redeclared as different kind of symbol
   55 |   int *newSize = 0;
      |        ^~~~~~~
exercises.c:53:50: note: previous definition of ‘newSize’ with type ‘int *’
   53 | int *filterEvenNumbers(int arr[], int size, int *newSize){
      |                                             ~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
848771a
Sat 12 Aug 2023 08:43:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   33 |     int aux = arr[left];
      |         ^~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:7: error: expected identifier or ‘(’ before ‘&’ token
   55 |   int &newSize = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
a5fcf27
Sat 12 Aug 2023 08:43:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   33 |     int aux = arr[left];
      |         ^~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:7: error: ‘newSize’ redeclared as different kind of symbol
   55 |   int newSize = 0;
      |       ^~~~~~~
exercises.c:53:50: note: previous definition of ‘newSize’ with type ‘int *’
   53 | int *filterEvenNumbers(int arr[], int size, int *newSize){
      |                                             ~~~~~^~~~~~~
exercises.c:60:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |   return newSize;;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a2c225
Sat 12 Aug 2023 08:43:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   33 |     int aux = arr[left];
      |         ^~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:8: error: ‘newSize’ redeclared as different kind of symbol
   55 |   int *newSize = 0;
      |        ^~~~~~~
exercises.c:53:50: note: previous definition of ‘newSize’ with type ‘int *’
   53 | int *filterEvenNumbers(int arr[], int size, int *newSize){
      |                                             ~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4c689be
Sat 12 Aug 2023 08:44:38 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   34 |     int aux = arr[left];
      |         ^~~
exercises.c:30:7: error: unused variable ‘aux’ [-Werror=unused-variable]
   30 |   int aux = 0;
      |       ^~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:56:8: error: ‘newSize’ redeclared as different kind of symbol
   56 |   int *newSize = 0;
      |        ^~~~~~~
exercises.c:54:50: note: previous definition of ‘newSize’ with type ‘int *’
   54 | int *filterEvenNumbers(int arr[], int size, int *newSize){
      |                                             ~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7806ca1
Sat 12 Aug 2023 08:45:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   30 |   int aux = 0;
      |       ^~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:56:8: error: ‘newSize’ redeclared as different kind of symbol
   56 |   int *newSize = 0;
      |        ^~~~~~~
exercises.c:54:50: note: previous definition of ‘newSize’ with type ‘int *’
   54 | int *filterEvenNumbers(int arr[], int size, int *newSize){
      |                                             ~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bd8a9ed
